--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 
-<a class="twitter-timeline" href="https://twitter.com/_TheOtherBox">
-  Tweets by _TheOtherBox
+<a class="twitter-timeline" href="https://twitter.com/itvhub">
+  Tweets by itvhub
 </a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
