--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 
-<a class="twitter-timeline" href="https://twitter.com/GlblCtzn">
-  Tweets by GlblCtzn
+<a class="twitter-timeline" href="https://twitter.com/diversityuk">
+  Tweets by diversityuk
 </a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
